[package]
name = "ptero-gdrive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
futures-util = "0.3.31"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls-native-roots",
    "multipart",
] }

# Use an older, simpler connection feature if the new one is fighting you
yup-oauth2 = { version = "12.1.1" }

# Explicitly add hyper-rustls with ring to satisfy yup-oauth2's internal check
hyper-rustls = { version = "0.27", default-features = false, features = [
    "native-tokio",
    "http1",
    "http2",
    "ring",
    "logging",
] }
